--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "start": "pm2 start index.js --attach --name nikka",
-    "stop": "pm2 stop nikkax",
-    "restart": "pm2 stop nikkax && pm2 start index.js --attach --name nikkax"
+    "stop": "pm2 stop nikka",
+    "restart": "pm2 stop nikka && pm2 start index.js --attach --name nikka"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
@@ -24,6 +24,7 @@
     "node-cache": "^5.1.2",
     "pino": "^9.9.0",
     "pm2": "^6.0.8",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "wa-sticker-formatter": "^4.4.4"
   }
 }
